<resources>
    <string name="app_name">Y_Fi</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_reenter_password">Re-enter Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Sign Up for Your Finance</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_finance">Finance</string>
    <string name="title_activity_group">Group</string>
    <string name="title_activity_monthly_report">MonthlyReport</string>
    <string name="title_activity_confirm">Confirm</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_group_board">GroupBoard</string>
    <string name="action_settings">Edit Group</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_testing">TestingActivity</string>
    <string name="title_activity_personal_finance">PersonalFinance</string>
</resources>
